tests/NormalTests/paczka1/small_fuzzy/21153951.err
Error in line 1: 7IUg902w A327 32,0
Error in line 3: 7IUg902w S760 62,7
Error in line 15: 5JKBxlFN S686 6,5
